--- a/Sample.Hosted/Pages/Shared/_Layout.cshtml
+++ b/Sample.Hosted/Pages/Shared/_Layout.cshtml
@@ -46,7 +46,7 @@
                     <div class="@layoutOptions.CssColumnSize() @layoutOptions.CssTextAlignment()">
                         @if (layoutOptions.Type == MainContentType.Card || layoutOptions.Type == MainContentType.CardBody)
                         {
-                            <div class="card m-0">
+                            <div class="card bg-light-subtle m-0">
                                 @if (!string.IsNullOrWhiteSpace(layoutOptions.Title))
                                 {
                                     <h3 class="card-header">@layoutOptions.Title</h3>
