--- a/Sample.Hosted/Pages/Shared/_Sidebar.cshtml
+++ b/Sample.Hosted/Pages/Shared/_Sidebar.cshtml
@@ -37,7 +37,7 @@
                 <div class="dropup d-flex" title="@settingsTitle" data-bs-toggle="tooltip" data-bs-placement="right">
                     <button id="SidebarSettingsToggle"
                             class="btn nav-link d-flex align-items-center link-body-emphasis text-decoration-none dropdown-toggle p-2  rounded-0"
-                            data-bs-toggle="dropdown" aria-expanded="false">
+                            data-bs-toggle="dropdown" aria-expanded="false"  aria-label="Toggle sidebar settings">
                         <span class="bi bi-gear-fill" style="font-size: 1.25rem;">@settingsText</span>
                     </button>
                     <ul class="dropdown-menu text-small shadow" aria-labelledby="SidebarSettingsToggle">
