--- a/Sample.Hosted/Pages/Shared/_LayoutBase.cshtml
+++ b/Sample.Hosted/Pages/Shared/_LayoutBase.cshtml
@@ -1,3 +1,4 @@
+@using DRN.Framework.Hosting.Utils
 <!DOCTYPE html>
 <html lang="en" data-bs-theme="light">
 @*
@@ -5,6 +6,11 @@ https://getbootstrap.com/docs/5.3/customize/color-modes/
 https://getbootstrap.com/docs/5.3/examples/
 https://getbootstrap.com/docs/5.3/examples/sidebars/
 *@
+
+@{
+        var canonicalUrl = Context.Request.Scheme + "://" + Context.Request.Host + Context.Request.Path;
+        var nonce = Context.GetNonce();
+}
 <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,33 +19,23 @@ https://getbootstrap.com/docs/5.3/examples/sidebars/
         <meta name="htmx-config" content='{
                 "selfRequestsOnly":true,"allowEval":false,
                 "refreshOnHistoryMiss":true, "historyCacheSize":0,
-                "inlineScriptNonce":"@Context.GetNonce()"}'>
+                "inlineScriptNonce":"@nonce"}'>
 
         <title>@ViewData[Get.ViewDataKeys.Title] - @ScopeContext.Settings.ApplicationName</title>
-        @{
-                var canonicalUrl = Context.Request.Scheme + "://" + Context.Request.Host + Context.Request.Path;
-                var nonce = Context.GetNonce();
-        }
+
         <link rel="canonical" href="@canonicalUrl"/>
         <link href="/images/100.jpeg" rel="icon" type="image/x-icon"/>
-
-        @*https://icons.getbootstrap.com/#usage*@
-        @*todo: bootstrap customizations https://getbootstrap.com/docs/5.3/customize/overview/*@
-        <link rel="preload" href="~/lib/bootstrap/fonts/bootstrap-icons.woff2?e34853135f9e39acf64315236852cd5a" as="font" crossorigin="anonymous">
-        @*<link href="~/lib/bootstrap/bootstrap.min.PI8n5gCc.css" rel="stylesheet" crossorigin="anonymous" integrity="sha256-PI8n5gCcz9cQqQXm3PEtDuPG8qx9oFsFctPg0S5zb8g="/>*@
-
-        @Html.Raw(ViteManifestHelper.GetStyleTag("buildwww/scss/bootstrap.scss", nonce))
-        <link href="~/lib/bootstrap/bootstrap-icons.min.pdY4ejLK.css" rel="stylesheet" crossorigin="anonymous" integrity="sha256-pdY4ejLKO67E0CM2tbPtq1DJ3VGDVVdqAR6j3ZwdiE4="/>
-
-        <!-- Custom CSS -->
-        <link href="~/css/site.css?v=1" rel="stylesheet"/>
-        <link href="~/css/sidebars.css?v=1" rel="stylesheet"/>
-
         <!-- Preload -->
-        @*<script src="~/js/site-preload.js?v=1"></script>*@
+        @*https://icons.getbootstrap.com/#usage*@
+        <link rel="preload" href="~/lib/bootstrap-icons/fonts/bootstrap-icons.woff2?e34853135f9e39acf64315236852cd5a" as="font" crossorigin="anonymous">
+        @*https://getbootstrap.com/docs/5.3/customize/overview/*@
+        @Html.Raw(ViteManifest.GetStyleTag("buildwww/lib/bootstrap/bootstrap.scss", nonce))
+        <link href="~/lib/bootstrap-icons/bootstrap-icons.min.pdY4ejLK.css" rel="stylesheet" crossorigin="anonymous"
+              integrity="sha256-pdY4ejLKO67E0CM2tbPtq1DJ3VGDVVdqAR6j3ZwdiE4="/>
 
+        @Html.Raw(ViteManifest.GetStyleTag("buildwww/app/css/app.css", nonce))
         @*defines DRN.App, DRN.Utils, DRN.Onmount*@
-        @Html.Raw(ViteManifestHelper.GetScriptTag("buildwww/js/site-preload.js", nonce))
+        @Html.Raw(ViteManifest.GetScriptTag("buildwww/app/js/app_preload.js", nonce))
         <script>
                 DRN.App.environment =  @Json.Serialize(ScopeContext.Settings.Environment.ToString());
                 DRN.App.isDev = @Json.Serialize(ScopeContext.Settings.IsDevEnvironment);
@@ -52,15 +48,14 @@ https://getbootstrap.com/docs/5.3/examples/sidebars/
         <script src="~/lib/onmount/onmount.tS6D5Yzw.js" crossorigin="anonymous" integrity="sha256-tS6D5Yzwxoy/uLQA9mVEiTu/GaafGn+we0HjTlj4zzM="></script>
 
         <!-- Postload -->
-        <script src="~/js/site-postload.js?v=1" crossorigin="anonymous"></script>
+        @Html.Raw(ViteManifest.GetScriptTag("buildwww/app/js/app_postload.js", nonce))
         <!-- Postload -->
 </head>
 <body class="d-flex flex-column bg-secondary-subtle vh-100" style="overflow: hidden;" hx-ext="safe-nonce" hx-boost="true" hx-history="false">
 @RenderBody()
 
-@*npm install bootstrap@5.3.8*
-https://getbootstrap.com/docs/5.3/getting-started/download/*@
-<script defer src="~/lib/bootstrap/bootstrap.bundle.min.NfRUfZNk.js" crossorigin="anonymous" integrity="sha256-NfRUfZNkERrKSFA0c1a8VmCplPDYtpTYj5lQmKe1R/o="></script>
+@*https://getbootstrap.com/docs/5.3/getting-started/download/*@
+@Html.Raw(ViteManifest.GetScriptTag("buildwww/lib/bootstrap/bootstrap.js", nonce, defer: true))
 <script defer src="~/lib/jquery/jquery.validate.min.umbTaFxP31.js" crossorigin="anonymous" integrity="sha256-umbTaFxP31Fv6O1itpLS/3+v5fOAWDLOUzlmvOGaKV4="></script>
 <script defer src="~/lib/jquery/jquery.validate.unobtrusive.min.YJa7W8Ei.js" crossorigin="anonymous" integrity="sha256-YJa7W8EiQdQpkk93iGEjjnLSUWRpRJbSfzfURh1kxz4="></script>
 
