--- a/Sample.Hosted/Pages/Shared/_LayoutBase.cshtml
+++ b/Sample.Hosted/Pages/Shared/_LayoutBase.cshtml
@@ -1,4 +1,3 @@
-@using DRN.Framework.Hosting.Utils
 <!DOCTYPE html>
 <html lang="en" data-bs-theme="light">
 @*
@@ -43,8 +42,8 @@ https://getbootstrap.com/docs/5.3/examples/sidebars/
         </script>
         <!-- Preload -->
 
-        <script src="~/lib/htmx/htmx.8xzDzxYQ.js" crossorigin="anonymous" integrity="sha256-8xzDzxYQnXrnW+ppKFQMaKJDvqEjRDIcRNy5fWyIVns="></script>
-        <script src="~/lib/htmx/safe-nonce.rscDWfKx.js" crossorigin="anonymous" integrity="sha256-rscDWfKxSAHJUDm6aADpKS6kAo3KShDaAN0B/aW1VqM="></script>
+        <script src="buildwww/lib/htmx/htmx_bundle.js" crossorigin="anonymous"></script>
+        
         <script src="~/lib/jquery/jquery.min.PnUB0Vw2.js" crossorigin="anonymous" integrity="sha256-PnUB0Vw2MOeRyLIDkuud7jGp9lzj793nbO9ccQFBqyQ="></script>
         <script src="~/lib/onmount/onmount.tS6D5Yzw.js" crossorigin="anonymous" integrity="sha256-tS6D5Yzwxoy/uLQA9mVEiTu/GaafGn+we0HjTlj4zzM="></script>
 
