Encoding extensions code cleanup

--- a/Sample.Hosted/buildwww/lib/bootstrap/bootstrap.scss
+++ b/Sample.Hosted/buildwww/lib/bootstrap/bootstrap.scss
@@ -1,3 +1,13 @@
+// Color Palette
+$primary: #3d5f6c; // Example: Change primary color to green pastel
+
+// Design Preferences
+$enable-shadows: false;
+$enable-gradients: true;
+
+// Optional: Ensure text contrast
+$min-contrast-ratio: 4.5;
+
 @import "../../../node_modules/bootstrap/scss/mixins/banner";
 @include bsBanner("");
 
