navbar ux improvement

--- a/Sample.Hosted/Pages/Shared/_Navbar.cshtml
+++ b/Sample.Hosted/Pages/Shared/_Navbar.cshtml
@@ -38,7 +38,7 @@
                         <button class="nav-link dropdown-toggle" id="navbarDropdown" data-bs-toggle="dropdown" aria-expanded="false">
                             @ScopeContext.User.Name
                         </button>
-                        <ul class="dropdown-menu dropdown-menu-end bg-primary dropdown-menu-dark border-0" aria-labelledby="navbarDropdown">
+                        <ul class="dropdown-menu dropdown-menu-end" data-bs-theme="light" aria-labelledby="navbarDropdown">
                             <li>
                                 <a class="dropdown-item" href="@Get.Page.UserProfile.Details">My Profile</a>
                             </li>
