--- a/Sample.Hosted/Pages/Shared/_LayoutBase.cshtml
+++ b/Sample.Hosted/Pages/Shared/_LayoutBase.cshtml
@@ -21,22 +21,21 @@ https://getbootstrap.com/docs/5.3/examples/sidebars/
     @*https://getbootstrap.com/docs/5.3/customize/overview/*@
     <link rel="preload" href="~/lib/bootstrap-icons/fonts/bootstrap-icons.woff2?e34853135f9e39acf64315236852cd5a" as="font" crossorigin="anonymous">
     <link href="buildwww/lib/bootstrap/bootstrap.scss" rel="stylesheet" crossorigin="anonymous"/>
-    <link href="~/lib/bootstrap-icons/bootstrap-icons.min.pdY4ejLK.css" rel="stylesheet" crossorigin="anonymous"
-          integrity="sha256-pdY4ejLKO67E0CM2tbPtq1DJ3VGDVVdqAR6j3ZwdiE4="/>
-
+    <link href="~/lib/bootstrap-icons/bootstrap-icons.min.pdY4ejLK.css" rel="stylesheet" crossorigin="anonymous" integrity="sha256-pdY4ejLKO67E0CM2tbPtq1DJ3VGDVVdqAR6j3ZwdiE4="/>
+    @*<link href="buildwww/app/css/app.css" rel="stylesheet" crossorigin="anonymous"/>*@
+    
     @*defines DRN.App, DRN.Utils, DRN.Onmount*@
-    <link href="buildwww/app/css/app.css" rel="stylesheet" crossorigin="anonymous"/>
     <script src="buildwww/app/js/app_preload.js" crossorigin="anonymous"></script>
     <script>
         DRN.App.environment =  @Json.Serialize(ScopeContext.Settings.Environment.ToString());
         DRN.App.isDev = @Json.Serialize(ScopeContext.Settings.IsDevEnvironment);
     </script>
     <!-- Preload -->
-
+    
     <script src="buildwww/lib/htmx/htmx_bundle.js" crossorigin="anonymous"></script>
     <script src="~/lib/jquery/jquery.min.PnUB0Vw2.js" crossorigin="anonymous" integrity="sha256-PnUB0Vw2MOeRyLIDkuud7jGp9lzj793nbO9ccQFBqyQ="></script>
     <script src="~/lib/onmount/onmount.tS6D5Yzw.js" crossorigin="anonymous" integrity="sha256-tS6D5Yzwxoy/uLQA9mVEiTu/GaafGn+we0HjTlj4zzM="></script>
-
+    
     <!-- Postload -->
     <script src="buildwww/app/js/app_postload.js" crossorigin="anonymous"></script>
     <!-- Postload -->
