--- a/Sample.Hosted/Pages/Shared/_LayoutBaseHtmx.cshtml
+++ b/Sample.Hosted/Pages/Shared/_LayoutBaseHtmx.cshtml
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="@CultureInfo.CurrentUICulture.Name">
 <head>
     <meta charset="utf-8">
     <title>@ViewData[Get.ViewDataKeys.Title] - @ScopeContext.Settings.ApplicationName</title>
