--- a/Sample.Hosted/Pages/_ViewImports.cshtml
+++ b/Sample.Hosted/Pages/_ViewImports.cshtml
@@ -1,13 +1,14 @@
-@using DRN.Framework.Utils.Settings
-@using DRN.Framework.Utils.Scope
+@using System.Globalization
 @using DRN.Framework.Hosting.TagHelpers
+@using DRN.Framework.Utils.Scope
+@using DRN.Framework.Utils.Settings
 @using Microsoft.AspNetCore.Mvc.TagHelpers
 @using NetEscapades.AspNetCore.SecurityHeaders
 @using Sample.Domain.Identity
-@using Sample.Hosted.Settings
 @using Sample.Hosted.Helpers
 @using Sample.Hosted.Pages
 @using Sample.Hosted.Pages.Shared.Models
+@using Sample.Hosted.Settings
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper *, DRN.Framework.Hosting
 @addTagHelper *, Sample.Hosted
