--- a/Sample.Hosted/Pages/Shared/_SidebarActionbarBadges.cshtml
+++ b/Sample.Hosted/Pages/Shared/_SidebarActionbarBadges.cshtml
@@ -14,6 +14,17 @@
 
 @if (ScopeContext.Settings.Environment == AppEnvironment.Development)
 {
+    @if (Get.Role.System.Admin)
+    {
+        <li class="nav-item">
+            <div title="@nameof(Get.Role.System.Admin)" data-bs-toggle="tooltip" data-bs-placement="left">
+                <span class="btn btn-light nav-link d-flex align-items-center py-2 rounded-0" type="button">
+                    <i class="bi bi-person-workspace text-primary" style="font-size: 1.25em;" role="img"></i>
+                </span>
+            </div>
+        </li>
+    }
+    
     @if (Model.HasPendingChanges)
     {
         <li class="nav-item">
