--- a/Sample.Hosted/Pages/Shared/_Navbar.cshtml
+++ b/Sample.Hosted/Pages/Shared/_Navbar.cshtml
@@ -10,7 +10,7 @@
             <span class="navbar-toggler-icon"></span>
         </button>
         <nav class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
+            <ul class="navbar-nav" authorized-only>
                 <li class="nav-item">
                     <a class="nav-link" href="@Get.Page.Root.Home">Home</a>
                 </li>
@@ -18,7 +18,7 @@
                     <li class="nav-item">
                         <a class="nav-link" authorized-only href="@Get.Page.Root.Swagger" target="_blank">Swagger</a>
                     </li>
-                    <div class="btn-group nav-item">
+                    <div class="btn-group nav-item" authorized-only>
                         <button class="nav-link dropdown-toggle" id="navbarTestPages" data-bs-toggle="dropdown" aria-expanded="false">
                             Test Pages
                         </button>
