native return url support added + bug fixes

--- a/Sample.Hosted/Pages/Home.cshtml
+++ b/Sample.Hosted/Pages/Home.cshtml
@@ -1,4 +1,4 @@
-@page "/{Home?}"
+@page
 @model Sample.Hosted.Pages.Home
 
 @{
@@ -6,7 +6,7 @@
     var options = Get.LayoutOptions.Centered(string.Empty);
     options.Type = MainContentType.None;
     options.ColumnSize = BootstrapColumnSize.None;
-    
+
     ViewData[Get.ViewDataKeys.Title] = title;
     ViewData[Get.ViewDataKeys.MainContentLayoutOptions] = options;
 }
@@ -17,11 +17,38 @@ https://getbootstrap.com/docs/5.3/examples/
 https://themes.getbootstrap.com
 *@
 
-<h1 class="display-4">Welcome to @ScopeContext.Settings.ApplicationName!</h1>
-<p>This is a simple home page example using Razor Pages.</p>
+<h1 class="display-4 mb-4">Welcome to @ScopeContext.Settings.ApplicationName!</h1>
+
+<div class="container">
+    <h1 class="mb-4">Examples</h1>
+
+    <div class="row g-3">
+        <!-- Hypermedia Gallery -->
+        <div class="col-md-6">
+            <div class="card h-100">
+                <div class="card-body">
+                    <h5 class="card-title">HTMX Examples</h5>
+                    <p class="card-text">Real projects using HTMX for dynamic interfaces.</p>
+                    <a href="https://hypermedia.gallery/built-with/htmx/" class="btn btn-outline-primary" target="_blank">View Gallery</a>
+                </div>
+            </div>
+        </div>
+
+        <!-- Bootstrap Official Examples -->
+        <div class="col-md-6">
+            <div class="card h-100">
+                <div class="card-body">
+                    <h5 class="card-title">Bootstrap Examples</h5>
+                    <p class="card-text">Official templates: dashboards, sign-in, pricing, blog, and more.</p>
+                    <a href="https://getbootstrap.com/docs/5.3/examples/" class="btn btn-outline-primary" target="_blank">Browse Examples</a>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 
 @section Scripts {
     <script>
-        console.log("Hello World! 2");
+        console.log("Welcome, " + @Json.Serialize(ScopeContext.User.Name ?? ScopeContext.User.Email));
     </script>
 }
