--- a/Sample.Hosted/Pages/Shared/_Navbar.cshtml
+++ b/Sample.Hosted/Pages/Shared/_Navbar.cshtml
@@ -2,7 +2,7 @@
 
 <header class="navbar navbar-expand-md container-xxl bg-primary" data-bs-theme="dark">
     <div class="container-fluid">
-        <a class="navbar-brand d-flex align-items-center link-body-emphasis text-decoration-none" href="@Get.Page.Root.Home" mark-when-active="false">
+        <a class="navbar-brand d-flex align-items-center link-body-emphasis text-decoration-none" asp-page="@Get.Page.Root.HomeAnonymous" mark-when-active="false">
             <i class="bi bi-bootstrap-reboot me-2" style="font-size: 1.5rem; "></i>@ScopeContext.Settings.ApplicationName
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
@@ -12,7 +12,7 @@
         <nav class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav" authorized-only>
                 <li class="nav-item">
-                    <a class="nav-link" href="@Get.Page.Root.Home">Home</a>
+                    <a class="nav-link" asp-page="@Get.Page.Root.Home" authorized-only>Home</a>
                 </li>
                 <environment include="@nameof(AppEnvironment.Development)">
                     <li class="nav-item">
@@ -30,7 +30,7 @@
                                 <hr class="dropdown-divider">
                             </li>
                             <li>
-                                <a class="dropdown-item" authorized-only href="@Get.Page.Test.Htmx">Htmx</a>
+                                <a class="dropdown-item" authorized-only asp-page="@Get.Page.Test.Htmx">Htmx</a>
                             </li>
                         </ul>
                     </div>
@@ -46,13 +46,13 @@
                         </button>
                         <ul class="dropdown-menu dropdown-menu-end" data-bs-theme="light" aria-labelledby="navbarDropdown">
                             <li>
-                                <a class="dropdown-item" href="@Get.Page.UserProfile.Details">My Profile</a>
+                                <a class="dropdown-item" asp-page="@Get.Page.UserProfile.Details">My Profile</a>
                             </li>
                             <li>
                                 <hr class="dropdown-divider">
                             </li>
                             <li>
-                                <a class="dropdown-item" href="@Get.Page.User.Logout">Log out</a>
+                                <a class="dropdown-item" asp-page="@Get.Page.User.Logout">Log out</a>
                             </li>
                         </ul>
                     </li>
@@ -63,10 +63,10 @@
                 else
                 {
                     <li class="nav-item">
-                        <a class="nav-link" href="@Get.Page.User.Login">Login</a>
+                        <a class="nav-link" asp-page="@Get.Page.User.Login">Login</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="@Get.Page.User.Register">Register</a>
+                        <a class="nav-link" asp-page="@Get.Page.User.Register">Register</a>
                     </li>
                 }
             </ul>
